"Dynamic" matcher conditions
Condition requires that the depended-on entry matches another entry's current value

ComparatorDependency is a holdover from early in the design. It might be removed, or perhaps re-worked into a "fallback" dependency for unsupported types?

Still need to re-work tooltips to properly handle dynamic matcher conditions